--- a/src/ui/design_files/interface.ui
+++ b/src/ui/design_files/interface.ui
@@ -138,6 +138,7 @@
     <addaction name="actionOpen_Database"/>
     <addaction name="actionSave_Database"/>
     <addaction name="actionSave_As"/>
+    <addaction name="actionClose"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -197,6 +198,11 @@
   <action name="actionSave_As">
    <property name="text">
     <string>Save As...</string>
+   </property>
+  </action>
+  <action name="actionClose">
+   <property name="text">
+    <string>Close</string>
    </property>
   </action>
  </widget>
